--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,38 @@
 }
 h1 {
   margin-bottom: 15px;
+  font-family: Helvetica;
+  font-size: 175%;
   text-align: center;
+}
+section{
+  position: relative;
+  border: 1px solid black;
+  padding: 10px;
+  background-color: ##00ffff;
 }
 p {
   border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
+  width: 100%;
+  margin: 0px;
+}
+.sectiontitle {
+  background-color: #00ff00;
+  width:30%;
+  margin-bottom: 15px;
+  text-align: center;
   font-family: Helvetica;
+  font-size: 125%;
   color: white;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.sectioncontent {
+  background-color: #ff00ff;
+  padding: 20px;
+  color: black;
+  clear: right;
 }
 /* Simple Responsive Framework. */
 .row {
